# Second-Brain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  connect_vault.cpp  getenv.cpp  getenv.h  main.cpp  vault.h
include/: getenv.h  vault.h
src/: getenv.cpp  main.cpp
